[package]
name = "tram_checker"
version = "0.1.2"
edition = "2021"
authors = ["Lukas Sandman"]
description = "A tool to get coming tram/bus departures from stations in Vastra Gotaland. Utilizes the Västtrafik API."
readme = "README.md"
homepage = "https://github.com/sandmanlukas/Tram-Checker"
repository = "https://github.com/sandmanlukas/Tram-Checker"
keywords = ["cli", "västtrafik"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
chrono = "0.4"
chrono-tz = "0.4"
whoami="1.2.1"